--- a/index.html
+++ b/index.html
@@ -95,6 +95,22 @@
       Our riser card was connected to the motherboard, located by the PSU.
     </figcaption>
   </figure>
+  <h3>Random Access Memory (RAM / memory)</h3>
+  <p>
+    RAM is utilized as a method for briefly saving data utilized by different segments of a PC. Any data inside RAM will be lost when a PC is reset or fueled off. 
+    For instance, the CPU uses RAM for the transitory stockpiling of projects and information. 
+    The primary memory that enables projects and information to be stacked for execution. 
+    Temporary (short term or volatile) memory and the contents in it can be overwritten.
+    Holds the program and information that the CPU is at present preparing. 
+    Advantage: by adding more RAM to a PC, the execution of the PC upgrades and more projects can be introduced and keep running in the meantime. 
+    Disadvantage: if power loss happens, all the contents that were stored in the memory are lost.
+  </p>
+  <figure>
+    <img src="RAM.jpg" alt="RAM or also known as Random Access Memory.">
+    <figcaption>
+      IDK.
+    </figcaption>
+  </figure>
   <h3>Power Supply Unit</h3>
   <p>
     The PSU was the last part our group pulled out of the computer, it sends low-voltage power to the 
