--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     Let's get started on how the Computer looked before we deconstructed it...
   </p>
   <figure>
-    <img class= "left" src="beforeconstruction.jpg" alt="Before PC Deconstruction">
+    <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
     <figcaption>
       As you can see, opening the computer case was all we had done prior to this picture being taken.
     </figcaption>
@@ -51,7 +51,7 @@
     millions of instructions every second. This is what makes the PC such a powerful tool.
   </p>
   <figure>
-    <img class= "right" src="floppydiskandCPU.jpg" alt="Central Processing Unit">
+    <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
     <figcaption>
       Our computer was using an Intel® Pentium® 4 processor (top-left), seen here beside the Floppy Disk Drive (right).
     </figcaption>
@@ -65,7 +65,7 @@
     We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes the waste heat produced by the CPU, to keep it within permissible operating temperature limits.
   </p>
   <figure>
-    <img class= "left" src="fan2.jpg" alt="CPU Cooling Fan">
+    <img src="fan2.jpg" alt="CPU Cooling Fan">
     <figcaption>
       The cooling fan (right) and heatsink (left) were mounted on top of the CPU.
     </figcaption>
@@ -77,7 +77,7 @@
     allows communication to the CPU, RAM, and all other computer hardware components. 
   </p>
   <figure>
-    <img class= "right" src="motherboard2.jpg" alt="Motherboard">
+    <img src="motherboard2.jpg" alt="Motherboard">
     <figcaption>
       Our motherboard was located at the bottom of our computer case.
     </figcaption>
@@ -90,7 +90,7 @@
     is parallel to the system board and save space within the computer case.
   </p>
   <figure>
-    <img class= "left" src="PCIRiserCard.jpg" alt="Riser Card">
+    <img src="PCIRiserCard.jpg" alt="Riser Card">
     <figcaption>
       Our riser card was connected to the motherboard, located by the PSU.
     </figcaption>
@@ -100,7 +100,7 @@
     IDK.
   </p>
   <figure>
-    <img class= "right" src="RAM.jpg" alt="RAM or also known as Random Access Memory.">
+    <img src="RAM.jpg" alt="RAM or also known as Random Access Memory.">
     <figcaption>
       IDK.
     </figcaption>
@@ -122,7 +122,7 @@
     adapt to the source.
   </p>
   <figure>
-    <img class= "left" src="powersupply.jpg" alt="Power Supply Unit">
+    <img src="powersupply.jpg" alt="Power Supply Unit">
     <figcaption>
       Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover, so it took quite some time to take it out.
     </figcaption>
@@ -135,7 +135,7 @@
     read and write data from a floppy disk, a computer system must have a floppy disk drive.
   </p>
   <figure>
-    <img class= "right" src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
+    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
     <figcaption>
       Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).
     </figcaption>
