--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
       As you can see, opening the computer case was all we had done prior to this picture being taken.
     </figcaption>
   </figure>
+  <p>
+    A computer case, otherwise called a computer chassis, tower, system unit, cabinet, base unit, or simply case, is the fenced in area 
+    that contains the greater part of the components of a computer (more often not including the display, keyboard, and mouse). The 
+    material usually used to create cases are SECC—Steel, electrogalvanized (created by applying zinc and strip by electrodeposition), 
+    icy moved, curl, or aluminum. Plastic is some of the time utilized, and different materials, for instance, glass, wood and even 
+    Lego blocks have showed up in do it yourself or home-built cases. 
+  <p>
   <hr>
   <h3>Central Processing Unit</h3>
   <p>
