--- a/index.html
+++ b/index.html
@@ -45,19 +45,21 @@
     material usually used to create cases are SECC—Steel, electrogalvanized (created by applying zinc and strip by electrodeposition), 
     icy moved, curl, or aluminum. Plastic is some of the time utilized, and different materials, for instance, glass, wood and even 
     Lego blocks have showed up in do it yourself or home-built cases. 
-  <p>
+  </p>
   <hr>
   <h3>Central Processing Unit</h3>
   <p>
-    The CPU was one of the first parts our group had managed to pull out of the computer, it is 
-    commonly referred to as the "brains" of a computer. The CPU is also known as the processor. The 
-    CPU is responsible for executing a program.
+    The CPU was one of the first parts our group had managed to pull out of the computer, it is commonly referred to as the "brains" of 
+    a computer. The CPU is also known as the processor. The CPU is responsible for executing a program.
     It is responsible for two things:
-     - Carrying out commands to make the hardware components perform actions. 
-     - Processing data; controls the execution of a computer and which performs basic arithmetic and 
-       logical operations. 
-    Although the instructions performed by the CPU are relatively simple, the CPU can execute many 
-    millions of instructions every second. This is what makes the PC such a powerful tool.
+  </p>
+  <ul>
+    <li>Carrying out commands to make the hardware components perform actions.</li> 
+    <li>Processing data; controls the execution of a computer and which performs basic arithmetic and logical operations.</li> 
+  </ul>
+  <p>
+    Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. 
+    This is what makes the PC such a powerful tool.
   </p>
   <figure>
     <img src="floppydiskandCPU.jpg" alt="Central Processing Unit">
