--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   </ul>
   <hr>
   <p>
-    Let's get started on how the Computer looked before we deconstructed it...
+    Let's get started on how the computer looked before we deconstructed it...
   </p>
   <figure>
     <img src="beforeconstruction.jpg" alt="Before PC Deconstruction">
@@ -44,7 +44,8 @@
     that contains the greater part of the components of a computer (more often not including the display, keyboard, and mouse). The 
     material usually used to create cases are SECC—Steel, electrogalvanized (created by applying zinc and strip by electrodeposition), 
     icy moved, curl, or aluminum. Plastic is some of the time utilized, and different materials, for instance, glass, wood and even 
-    Lego blocks have showed up in do it yourself or home-built cases. 
+    Lego blocks have showed up in do it yourself or home-built cases. The computer case protects and holds together all the pieces that 
+    are mandatory for a computer to function.
   </p>
   <hr>
   <h3>Central Processing Unit</h3>
@@ -68,8 +69,15 @@
     </figcaption>
   </figure>
   <p>
-    The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: It creates orders to influence the equipment segments to perform activities. 
-    Processes information; controls the execution of a PC and which performs fundamental math and sensible operations. Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of guidelines consistently. This is the thing that makes the PC such an intense device. 
+    The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: 
+  </p>
+  <ul>
+    <li>It creates orders to influence the equipment segments to perform activities.</li> 
+    <li>Processes information; controls the execution of a PC and which performs fundamental math and sensible operations.</li>
+  </ul>
+  <p>
+    Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of 
+    guidelines consistently. This is the thing that makes the PC such an intense device. 
   </p>
   <hr>
   <h3>CPU Cooling Fan</h3>
