--- a/index.html
+++ b/index.html
@@ -160,12 +160,48 @@
     read and write data from a floppy disk, a computer system must have a floppy disk drive.
   </p>
   <figure>
-    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive">
+    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
     <figcaption>
       Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).
     </figcaption>
   </figure>
   <hr>
   <h3>Optical Disk Drive</h3>
+  <p>
+    IDK.
+  </p>
+  <figure>
+    <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
+    <figurecaption>
+      Here is our Optical Disk Drive.
+    </figurecaption>
+  </figure>
+  <p>
+    An optical drive in a PC framework enables you to utilize Cds, DVDs, and Blu-beam plates to tune in to music or watch a film. 
+    Most drives additionally enable you to compose information to a plate, so you can make your own music Albums or make a reinforcement
+    duplicate of critical information. 
+  </p>
+  <p>
+    Definition: An optical circle drive (ODD) utilizes a laser light to peruse information from or compose information to an optical 
+    plate. These incorporate Compact discs, DVDs, and Blu-beam circles. This enables you to play music or watch motion pictures 
+    utilizing pre-recorded circles. PC programming likewise frequently goes ahead one of these circles, so you require an optical drive 
+    to introduce programming. Most current drives enable you to keep in touch with an unfilled circle, so you can make your own music 
+    Discs or make a reinforcement duplicate of critical information. 
+  </p>
+  <p>
+    Parts: An optical plate drive utilizes a laser to peruse and compose information. A laser in this setting implies an electromagnetic
+    wave with a particular wavelength inside or close to the obvious light range. Diverse kinds of plates require distinctive 
+    wavelengths. For minimized circles, or Discs, a wavelength of 780 nanometers (nm) is utilized, which is in the infrared range. For advanced 
+    video plates, or DVDs, a wavelength of 650 nm (red) is utilized, while for Blu-beam circles a wavelength of 405 nm (violet) is 
+    utilized. 
+  </p>
+  <p>
+    An optical drive that can work with various kinds of plates will along these lines contain numerous lasers. The component to peruse 
+    and compose information comprises of a laser, a focal point to direct the laser shaft, and photodiodes to identify the light 
+    reflection from the circle. The optical components for perusing Cds and DVDs are very comparable, so a similar focal point can be 
+    utilized for the two sorts of plates. The component for pursuing Blu-beam plates, in any case, is very unique. An optical drive 
+    that works with a wide range of plates will in this way have two separate focal points: one for Compact disc/DVD and one for 
+    Blu-beam.
+  </p>
 </body>
 </html>
