--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
-  <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
+  <h2 class="hs">By: PMaran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
   <h3 class="intro">Welcome to our group's HTML website for the Hardware Project</h3>
   <p>
