--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
-  <h2 class="hs">By: PMaran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
+  <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
   <h3 class="intro">Welcome to our group's HTML website for the Hardware Project</h3>
   <p>
@@ -17,6 +17,7 @@
     that make it up. Here are the main things that will be covered:
   </p>
   <ul>
+    <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
     <li>Central Processing Unit (CPU / Processor)</li>
     <li>CPU Cooling Fans</li>
     <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
@@ -27,7 +28,6 @@
     <li>Power Supply Unit (PSU)</li>
     <li>Floppy Disk Drive (FDD)</li>
     <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
-    <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
   </ul>
   <hr>
   <p>
@@ -117,6 +117,22 @@
       Our riser card was connected to the motherboard, located by the PSU.
     </figcaption>
   </figure>
+  <p>
+    A riser card is a printed circuit board that picks up a multitude of signal lines (often bused) via a single connector 
+    (usually an edge connector) on a motherboard and distributes them via dedicated connectors on the card.
+  </p>
+  <hr>
+  <h3>Riser Cable</h3>
+  <figure>
+    <img src="PCIERisercable.jpg" alt="This is the riser cable.">
+    <figcaption>
+      IDK.
+    </figcaption>
+  </figure>
+  <p>
+    These cables are commonly used to connect multiple video cards to a motherboard by "lifting them" off and away from the motherboard.
+    This also allows for more efficient cooling, thereby increasing the life of the cards, as well as possibly running at higher speeds.
+  </p>
   <hr>
   <h3>Random Access Memory (RAM / memory)</h3>
   <p>
@@ -203,5 +219,12 @@
     that works with a wide range of plates will in this way have two separate focal points: one for Compact disc/DVD and one for 
     Blu-beam.
   </p>
+  <hr>
+  <h3>
+  <hr>
+  <h3>Sources</h3>
+  <ul>
+    <li>(2012, August 13). Retrieved January 14, 2018, from https://www.youtube.com/watch?v=_QElVrqBwnk</li>
+  </ul>
 </body>
 </html>
