--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
   </ul>
   <hr>
+  <h3>Computer Case</h3>
   <p>
     Let's get started on how the computer looked before we deconstructed it...
   </p>
