--- a/index.html
+++ b/index.html
@@ -226,6 +226,9 @@
   <h3>Sources</h3>
   <ul>
     <li>(2012, August 13). Retrieved January 14, 2018, from https://www.youtube.com/watch?v=_QElVrqBwnk</li>
+    <li>Riser card. (2017, June 05). Retrieved January 14, 2018, from https://en.wikipedia.org/wiki/Riser_card</li>
+    <li>How To Correctly Use and Install PCI-E Riser Cables. (n.d.). Retrieved January 14, 2018, from 
+        http://www.gobitgo.com/articles/1001/How-To-Correctly-Use-and-Install-PCI-E-Riser-Cables/</li>
   </ul>
 </body>
 </html>
