--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
       Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover, so it took quite some time to take it out.
     </figcaption>
   </figure>
+  <p>
+    The power supply is in charge of changing over the approaching power supply to the 5v and 12v DC control that is required by the PC.
+    The 5v supply is utilized to control the circuit sheets on the PC. The 12v supply is utilized to control engine driven gadgets, for 
+    example, hard drives or Compact disc ROMs. 
+  </p>
   <hr>
   <h3>Floppy Disk Drive</h3>
   <p>
