--- a/index.html
+++ b/index.html
@@ -83,7 +83,8 @@
   <hr>
   <h3>CPU Cooling Fan</h3>
   <p>
-    We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes the waste heat produced by the CPU, to keep it within permissible operating temperature limits.
+    We had already detached the CPU cooling fan, and heatsink, prior to detaching the CPU, it removes the waste heat produced by the 
+    CPU, to keep it within permissible operating temperature limits.
   </p>
   <figure>
     <img src="fan2.jpg" alt="CPU Cooling Fan">
@@ -146,13 +147,13 @@
     </figcaption>
   </figure>
   <p>
-    RAM is utilized as a method for briefly saving data utilized by different segments of a PC. Any data inside RAM will be lost when a PC is reset or fueled off. 
-    For instance, the CPU uses RAM for the transitory stockpiling of projects and information. 
+    RAM is utilized as a method for briefly saving data utilized by different segments of a PC. Any data inside RAM will be lost when a 
+    PC is reset or fueled off. For instance, the CPU uses RAM for the transitory stockpiling of projects and information. 
     The primary memory that enables projects and information to be stacked for execution. 
     Temporary (short term or volatile) memory and the contents in it can be overwritten.
     Holds the program and information that the CPU is at present preparing. 
-    Advantage: by adding more RAM to a PC, the execution of the PC upgrades and more projects can be introduced and keep running in the meantime. 
-    Disadvantage: if power loss happens, all the contents that were stored in the memory are lost.
+    Advantage: by adding more RAM to a PC, the execution of the PC upgrades and more projects can be introduced and keep running in the 
+    meantime. Disadvantage: if power loss happens, all the contents that were stored in the memory are lost.
   </p>
   <hr>
   <h3>Power Supply Unit</h3>
@@ -165,7 +166,8 @@
   <figure>
     <img src="powersupply.jpg" alt="Power Supply Unit">
     <figcaption>
-      Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover, so it took quite some time to take it out.
+      Our computer's Power Supply Unit was screwed into the Computer Case, and had a protective cover, so it took quite some time to 
+      take it out.
     </figcaption>
   </figure>
   <p>
@@ -213,9 +215,9 @@
   <p>
     Parts: An optical plate drive utilizes a laser to peruse and compose information. A laser in this setting implies an electromagnetic
     wave with a particular wavelength inside or close to the obvious light range. Diverse kinds of plates require distinctive 
-    wavelengths. For minimized circles, or Discs, a wavelength of 780 nanometers (nm) is utilized, which is in the infrared range. For advanced 
-    video plates, or DVDs, a wavelength of 650 nm (red) is utilized, while for Blu-beam circles a wavelength of 405 nm (violet) is 
-    utilized. 
+    wavelengths. For minimized circles, or Discs, a wavelength of 780 nanometers (nm) is utilized, which is in the infrared range. 
+    For advanced video plates, or DVDs, a wavelength of 650 nm (red) is utilized, while for Blu-beam circles a wavelength of 405 nm 
+    (violet) is utilized. 
   </p>
   <p>
     An optical drive that can work with various kinds of plates will along these lines contain numerous lasers. The component to peruse 
@@ -252,6 +254,7 @@
     <li>Riser card. (2017, June 05). Retrieved January 14, 2018, from https://en.wikipedia.org/wiki/Riser_card</li>
     <li>How To Correctly Use and Install PCI-E Riser Cables. (n.d.). Retrieved January 14, 2018, from 
         http://www.gobitgo.com/articles/1001/How-To-Correctly-Use-and-Install-PCI-E-Riser-Cables/</li>
+    <li>Riser card. (2017, June 05). Retrieved January 15, 2018, from https://en.wikipedia.org/wiki/Floppy_disk</li>
   </ul>
 </body>
 </html>
