--- a/index.html
+++ b/index.html
@@ -189,6 +189,11 @@
       Our computer's Floppy Disk Drive (right) was located right beside the Optical Disk Drive (left).
     </figcaption>
   </figure>
+  <p>
+    A floppy disk, also called a floppy, diskette, or just disk, is a type of disk storage composed of a disk of thin and flexible 
+    magnetic storage medium, sealed in a rectangular plastic enclosure lined with fabric that removes dust particles. Floppy disks are 
+    read and written by a floppy disk drive (FDD).
+  </p>
   <hr>
   <h3>Optical Disk Drive</h3>
   <p>
