--- a/index.html
+++ b/index.html
@@ -105,6 +105,13 @@
       Our motherboard was located at the bottom of our computer case.
     </figcaption>
   </figure>
+  <p>
+    The motherboard holds the CPU, memory chips (RAM and ROM), development spaces, control connectors and some other microchips 
+    required for the PC to work. On the other hand alluded to as the mainboard, mboard, mobo, mobd, backplane load up, base load up, 
+    fundamental circuit load up, planar load up, framework load up, or a rationale load up on Macintosh PCs. The motherboard is a 
+    printed circuit board that is the establishment of a PC, situated on the posterior or at the base of the PC undercarriage. It 
+    dispenses control and enables correspondence to the CPU, Slam, and all other PC equipment parts. 
+  </p>
   <hr>
   <h3>Riser Card</h3>
   <p>
