--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
   <hr>
   <h3>Random Access Memory (RAM / memory)</h3>
   <p>
-    IDK.
+    We only had one stick of RAM
   </p>
   <figure>
     <img src="RAM.jpg" alt="RAM or also known as Random Access Memory.">
     <figcaption>
-      IDK.
+      The RAM was really easy to take out beause you don't need to unscrew or unplug any cables.
     </figcaption>
   </figure>
   <p>
