--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
   <hr>
   <h3>Random Access Memory (RAM / memory)</h3>
   <p>
-    We only had one stick of RAM
+    We only had one stick of RAM.
   </p>
   <figure>
     <img src="RAM.jpg" alt="RAM or also known as Random Access Memory.">
