--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
   <link rel="stylesheet" type="text/css" href="style.css"/>
   <link rel="stylesheet" type="text/css" href="scrollbar.css"/>
   <meta charset="UTF-8"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Computers</title>
   <link rel="icon" href="favicon.ico" type="image/ico">
 </head>
 <body>
-  <div id="wrapper">
-  <div class="scrollbar" id="style">
-    <div class="force-overflow"></div>
-  </div>
   <h1 class="hs">ICS2O7 2018 Hardware Project</h1>
   <h2 class="hs">By: Maran S, Ken C, Joy Z, Noor A, &amp; Tahmid C</h2>
   <hr>
