--- a/index.html
+++ b/index.html
@@ -16,19 +16,21 @@
     In this project, we will be exploring the computer system, specifically the pieces of hardware 
     that make it up. Here are the main things that will be covered:
   </p>
-  <ul>
-    <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
-    <li>Central Processing Unit (CPU / Processor)</li>
-    <li>CPU Cooling Fans</li>
-    <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
-    <li>Riser Card</li>
-    <li>Riser Cable</li>
-    <li>Random Access Memory (RAM / Memory)</li>
-    <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
-    <li>Power Supply Unit (PSU)</li>
-    <li>Floppy Disk Drive (FDD)</li>
-    <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
-  </ul>
+  <div class= "wrapper">
+    <ul>
+      <li>Computer Case (System Unit / Computer Chassis / Tower / Base Unit / Case)</li>
+      <li>Central Processing Unit (CPU / Processor)</li>
+      <li>CPU Cooling Fans</li>
+      <li>Motherboard (Mainboard / System Board / Logicboard / MoBo)</li>
+      <li>Riser Card</li>
+      <li>Riser Cable</li>
+      <li>Random Access Memory (RAM / Memory)</li>
+      <li>Hard Disk Drive (HDD / Hard Drive / Storage)</li>
+      <li>Power Supply Unit (PSU)</li>
+      <li>Floppy Disk Drive (FDD)</li>
+      <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+    </ul>
+  </div>
   <hr>
   <h3>Computer Case</h3>
   <p>
@@ -55,10 +57,12 @@
     a computer. The CPU is also known as the processor. The CPU is responsible for executing a program.
     It is responsible for two things:
   </p>
-  <ul>
-    <li>Carrying out commands to make the hardware components perform actions.</li> 
-    <li>Processing data; controls the execution of a computer and which performs basic arithmetic and logical operations.</li> 
-  </ul>
+  <div class= "wrapper">
+    <ul>
+      <li>Carrying out commands to make the hardware components perform actions.</li> 
+      <li>Processing data; controls the execution of a computer and which performs basic arithmetic and logical operations.</li> 
+    </ul>
+  </div>
   <p>
     Although the instructions performed by the CPU are relatively simple, the CPU can execute many millions of instructions every second. 
     This is what makes the PC such a powerful tool.
@@ -72,10 +76,12 @@
   <p>
     The CPU is a scaled down electronic segment that can be alluded to as the mind of the PC. It is in charge of two things: 
   </p>
-  <ul>
-    <li>It creates orders to influence the equipment segments to perform activities.</li> 
-    <li>Processes information; controls the execution of a PC and which performs fundamental math and sensible operations.</li>
-  </ul>
+  <div class= "wrapper">
+    <ul>
+      <li>It creates orders to influence the equipment segments to perform activities.</li> 
+      <li>Processes information; controls the execution of a PC and which performs fundamental math and sensible operations.</li>
+    </ul>
+  </div>
   <p>
     Despite the fact that the directions performed by the CPU are moderately straightforward, the CPU can execute a large number of 
     guidelines consistently. This is the thing that makes the PC such an intense device. 
@@ -248,12 +254,13 @@
   </p>
   <hr>
   <h3>Sources</h3>
-  <ul>
-    <li>(2012, August 13). Retrieved January 14, 2018, from https://www.youtube.com/watch?v=_QElVrqBwnk</li>
-    <li>Riser card. (2017, June 05). Retrieved January 14, 2018, from https://en.wikipedia.org/wiki/Riser_card</li>
-    <li>How To Correctly Use and Install PCI-E Riser Cables. (n.d.). Retrieved January 14, 2018, from 
-        http://www.gobitgo.com/articles/1001/How-To-Correctly-Use-and-Install-PCI-E-Riser-Cables/</li>
-    <li>Riser card. (2017, June 05). Retrieved January 15, 2018, from https://en.wikipedia.org/wiki/Floppy_disk</li>
-  </ul>
+  <div class= "wrapper">
+    <ul>
+      <li>(2012, August 13). Retrieved January 14, 2018, from https://www.youtube.com/watch?v=_QElVrqBwnk</li>
+      <li>Riser card. (2017, June 05). Retrieved January 14, 2018, from https://en.wikipedia.org/wiki/Riser_card</li>
+      <li>How To Correctly Use and Install PCI-E Riser Cables. (n.d.). Retrieved January 14, 2018, from http://www.gobitgo.com/articles/1001/How-To-Correctly-Use-and-Install-PCI-E-Riser-Cables/</li>
+      <li>Riser card. (2017, June 05). Retrieved January 15, 2018, from https://en.wikipedia.org/wiki/Floppy_disk</li>
+    </ul>
+  </div>
 </body>
 </html>
