--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <li>Power Supply Unit (PSU)</li>
       <li>Floppy Disk Drive (FDD)</li>
       <li>Optical Disk Drive (ODD / CD/DVD-ROM Drive)</li>
+      <li>How does it all work?</li>
     </ul>
   </div>
   <hr>
