--- a/index.html
+++ b/index.html
@@ -99,6 +99,13 @@
       The cooling fan (right) and heatsink (left) were mounted on top of the CPU.
     </figcaption>
   </figure>
+  <p>
+    A computer fan is any fan inside, or attached to, a computer case used for active cooling, and may refer to fans that draw cooler 
+    air into the case from the outside, expel warm air from inside, or move air across a heatsink to cool a particular component. As 
+    processors, graphics cards, RAM and other components in computers have increased in speed and power consumption, the amount of heat 
+    produced by these components as a side-effect of normal operation has also increased. These components need to be kept within a 
+    specified temperature range to prevent overheating, instability, malfunction and damage leading to a shortened component lifespan.
+  </p>
   <hr>
   <h3>Motherboard</h3>
   <p>
