--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
   <figure>
     <img src="PCIERisercable.jpg" alt="This is the riser cable.">
     <figcaption>
-      IDK.
+      
     </figcaption>
   </figure>
   <p>
@@ -218,7 +218,7 @@
   <hr>
   <h3>Optical Disk Drive</h3>
   <p>
-    IDK.
+    The optical disk drive was taken out right after the floppy disk.
   </p>
   <figure>
     <img src="floppydisk+DVDdrive2.jpg" alt="Floppy Disk Drive and DVD drive">
