--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" type="text/css" href="scrollbar.css"/>
   <meta charset="UTF-8"/>
   <title>Computers</title>
   <link rel="icon" href="favicon.ico" type="image/ico">
@@ -147,9 +148,6 @@
   <h3>Riser Cable</h3>
   <figure>
     <img src="PCIERisercable.jpg" alt="This is the riser cable.">
-    <figcaption>
-      
-    </figcaption>
   </figure>
   <p>
     These cables are commonly used to connect multiple video cards to a motherboard by "lifting them" off and away from the motherboard.
@@ -174,6 +172,21 @@
     Holds the program and information that the CPU is at present preparing. 
     Advantage: by adding more RAM to a PC, the execution of the PC upgrades and more projects can be introduced and keep running in the 
     meantime. Disadvantage: if power loss happens, all the contents that were stored in the memory are lost.
+  </p>
+  <hr>
+  <h3>Hard Disk Drive</h3>
+  <figure>
+    <img src="harddrive1.jpg" alt="Hard Disk Drive">
+    <figcaption>
+      The hard drive is an important component of our computer.
+    </figcaption>
+  </figure>
+  <p>
+    A hard disk drive (HDD), hard disk, hard drive or fixed disk is a data storage device that uses magnetic storage to store and 
+    retrieve digital information using one or more rigid rapidly rotating disks (platters) coated with magnetic material. The platters 
+    are paired with magnetic heads, usually arranged on a moving actuator arm, which read and write data to the platter surfaces. Data 
+    is accessed in a random-access manner, meaning that individual blocks of data can be stored or retrieved in any order and not only 
+    sequentially. HDDs are a type of non-volatile storage, retaining stored data even when powered off.
   </p>
   <hr>
   <h3>Power Supply Unit</h3>
