--- a/index.html
+++ b/index.html
@@ -280,6 +280,7 @@
       <li>Riser card. (2017, June 05). Retrieved January 14, 2018, from https://en.wikipedia.org/wiki/Riser_card</li>
       <li>How To Correctly Use PCI-E Riser Cables. Retrieved January 14, 2018, from http://www.gobitgo.com/articles/1001/How-To-Correctly-Use-and-Install-PCI-E-Riser-Cables/</li>
       <li>Riser card. (2017, June 05). Retrieved January 15, 2018, from https://en.wikipedia.org/wiki/Floppy_disk</li>
+      <li>Hard disk drive. (2018, January 15). Retrieved January 16, 2018, from https://en.wikipedia.org/wiki/Hard_disk_drive</li>
     </ul>
   </div>
 </body>
